test/bpmn/invalid/element-unknown.bpmn
<definitions id="test">
  <process id="elementUnknownTest" isExecutable="true">
    <startEvent id="startEvent">
      <outgoing>f1</outgoing>
    </startEvent>
    <sequenceFlow id="f1" sourceRef="startEvent" targetRef="unknownElement" />
    <unknownElement id="unknownElement">
      <incoming>f1</incoming>
      <outgoing>f2</outgoing>
    </unknownElement>
    <sequenceFlow id="f2" sourceRef="unknownElement" targetRef="endEvent" />
    <endEvent id="endEvent">
      <incoming>f2</incoming>
    </endEvent>
  </process>
</definitions>
